--- a/WebContent/cadastro/findAtendente.xhtml
+++ b/WebContent/cadastro/findAtendente.xhtml
@@ -125,7 +125,7 @@
 										   background-color: lightskyblue ;
 										   color:white !important;
 										   font-size:large;"
-										immediate="true" action="#{atendenteBean.edita}"
+										immediate="true" action="#{atendenteBean.editar}"
 										update="table, @form"
 										rendered="#{atendenteBean.atendenteModel.idAtendente > 0}"
 										icon=" fa fa-pencil" iconPos="right">
