--- a/WebContent/cadastro/findMaterial.xhtml
+++ b/WebContent/cadastro/findMaterial.xhtml
@@ -169,6 +169,12 @@
 										update=" inputNome,table" />
 								</div>
 							</div>
+							<div class="ui-g-12 ui-lg-1">
+									<p:commandLink rendered="#{materialBean.lstMaterial.size() > 0}"	
+									actionListener="#{materialBean.geraRelatorio}">
+									<h:graphicImage	library="img" name="pdf-icon.png" height="40" width="40"  />
+									</p:commandLink>
+							</div>
 						</div>
 					</div>
 				</p:panel>
