--- a/WebContent/cadastro/findMedico.xhtml
+++ b/WebContent/cadastro/findMedico.xhtml
@@ -159,6 +159,13 @@
 										update="table" />
 								</div>
 							</div>
+							
+							<div class="ui-g-12 ui-lg-1">
+									<p:commandLink rendered="#{medicoBean.lstMedico.size() > 0}"	
+										actionListener="#{medicoBean.geraRelatorio}">
+										<h:graphicImage	library="img" name="pdf-icon.png" height="40" width="40"  />
+									</p:commandLink>
+							</div>
 						</div>
 					</div>
 				</p:panel>
