--- a/WebContent/cadastro/findPaciente.xhtml
+++ b/WebContent/cadastro/findPaciente.xhtml
@@ -161,6 +161,12 @@
 									update=" inputNome,inputCPF, table" />
 									</div>
 							</div>
+							<div class="ui-g-12 ui-lg-1">
+									<p:commandLink	rendered="#{pacienteBean.lstPaciente.size() > 0}"
+										actionListener="#{pacienteBean.geraRelatorio}">
+										<h:graphicImage	library="img" name="pdf-icon.png" height="40" width="40" />
+									</p:commandLink>
+							</div>
 						</div>
 					</div>
 				</p:panel>
