--- a/WebContent/cadastro/findEspecialidade.xhtml
+++ b/WebContent/cadastro/findEspecialidade.xhtml
@@ -142,6 +142,12 @@
 										update=" inputNome,table" />
 								</div>
 							</div>
+							<div class="ui-g-12 ui-lg-1">
+									<p:commandLink rendered="#{especialidadeBean.lstEspecialidade.size() > 0}"	
+									actionListener="#{especialidadeBean.geraRelatorio}">
+									<h:graphicImage	library="img" name="pdf-icon.png" height="40" width="40"  />
+									</p:commandLink>
+							</div>
 						</div>
 					</div>
 				</p:panel>
