--- a/WebContent/cadastro/findEstoquista.xhtml
+++ b/WebContent/cadastro/findEstoquista.xhtml
@@ -110,7 +110,7 @@
 										   background-color: lightskyblue ;
 										   color:white !important;
 										   font-size:large;"
-										immediate="true" action="#{estoquistaBean.edita}"
+										immediate="true" action="#{estoquistaBean.editar}"
 										update="table, @form"
 										rendered="#{estoquistaBean.estoquistaModel.idEstoquista > 0 }"
 										icon=" fa fa-pencil" iconPos="right">
@@ -160,6 +160,13 @@
 										id="btnBuscatxt" actionListener="#{estoquistaBean.busca}"
 										update=" inputNome,inputCPF, table" />
 								</div>
+							</div>
+							
+								<div class="ui-g-12 ui-lg-1">
+									<p:commandLink rendered="#{estoquistaBean.lstEstoquista.size() > 0}"	
+										actionListener="#{estoquistaBean.geraRelatorio}">
+										<h:graphicImage	library="img" name="pdf-icon.png" height="40" width="40"  />
+									</p:commandLink>
 							</div>
 						</div>
 					</div>
