--- a/WebContent/cadastro/findFornecedor.xhtml
+++ b/WebContent/cadastro/findFornecedor.xhtml
@@ -168,6 +168,12 @@
 										update=" inputNome,table" />
 								</div>
 							</div>
+							<div class="ui-g-12 ui-lg-1">
+									<p:commandLink	rendered="#{fornecedorBean.lstFornecedor.size() > 0}"
+									actionListener="#{fornecedorBean.geraRelatorio}">
+									<h:graphicImage	library="img" name="pdf-icon.png" height="40" width="40" />
+									</p:commandLink>
+							</div>
 						</div>
 					</div>
 				</p:panel>
